--- a/ui/style.css
+++ b/ui/style.css
@@ -3,7 +3,7 @@ body {
     background-color:white;
     margin-top: 75px;
     text-align:center;
-    width:1000px;
+    width:100%;
 }
 
 .center {
