[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -24,6 +24,7 @@ body {
     margin-left:200px;
     background-color:white;
     width:70%;
+    height:100%;
     padding:10px;
     border-radius:5px;
 }
