--- a/ui/style.css
+++ b/ui/style.css
@@ -24,6 +24,6 @@ body {
     margin-left:200px;
     background-color:white;
     width:70%;
-    padding:10px;
+    margin:10px;
     border-radius:5px;
 }
