--- a/ui/style.css
+++ b/ui/style.css
@@ -21,9 +21,8 @@ body {
     height: 200px;
 }
 .container{
-    margin-left:200px;
     width:100%;
-    margin:10px;
+    padding:20px;
 }
 .head img{
     border-radius:50%;
