--- a/ui/style.css
+++ b/ui/style.css
@@ -25,8 +25,7 @@ body {
 }
 .head img{
     border-radius:50%;
-    float:right;
-    line-height:100px;
+    text-align:right;
 }
 .head{
     background-color:orange;
