--- a/ui/style.css
+++ b/ui/style.css
@@ -23,10 +23,11 @@ body,h1,h2,h3,h4 {
     border-radius:50%;
     position:absolute;
     right:0;
+    top:1%;
 }
 .head{
     background-color:orange;
-    line-height:100px;
+    line-height:80px;
     margin:0;
     padding:10px;
 }
