--- a/ui/style.css
+++ b/ui/style.css
@@ -1,7 +1,6 @@
 body,h1,h2,h3,h4 {
     font-family: sans-serif;
     margin:0;
-    padding:10px;
 }
 
 .center {
@@ -31,5 +30,7 @@ body,h1,h2,h3,h4 {
     line-height:80px;
     margin:0;
     padding:10px;
-    width:100%;
+}
+.container{
+    padding:10px;
 }
