--- a/ui/style.css
+++ b/ui/style.css
@@ -30,6 +30,9 @@ body,h1,h2,h3,h4 {
     line-height:80px;
     margin:0;
     padding:10px;
+    font-weight:bold;
+    text-decoration:none;
+    font-size:22px;
 }
 .container{
     padding:10px;
