--- a/ui/style.css
+++ b/ui/style.css
@@ -33,10 +33,13 @@ body,h1,h2,h3,h4 {
     font-weight:bold;
     font-size:22px;
 }
-.head a{
+.head ,ul a{
     text-decoration:none;
     color:black;
 }
 .container{
     padding:10px;
+}
+ul {
+    list-style:none;
 }
