--- a/ui/style.css
+++ b/ui/style.css
@@ -26,7 +26,7 @@ body,h1,h2,h3,h4 {
     top:2%;
 }
 .head{
-    background-color:red;
+    background-color:green;
     line-height:80px;
     margin:0;
     padding:10px;
